methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:2: error: Boolean does not take parameters
def move(stepCount: Int,forward: Boolean) {if (forward) {for (i<-1 to stepCount) {forward()}} else {backward()}} 
                                                                                         ^